--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,56 +1,69 @@
-.dropdown{
-    padding: 0px 20px;
+.navbar{
+    width: 100%;
+    height: 80px;
+    background-color:#001659;
     display: flex;
-    flex-direction: column;
-
-}
-.dropdownlink{
-    font-size: 18px;
-    margin-bottom: 8px;
-    border: 1px solid lightgray;
-    padding: 5px;
-    width: 200px;
-    background-color: lightgray;
-    color: blue;
-    font-weight: bold;
-    border-radius: 3px;
-}
-.projecttext{
-    display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 5px;
-    cursor: pointer;
-    position: relative;
-   
-}
-.dropContainer{
-    position: relative;
-}
-.down{
-    /* display: flex;
-    flex-direction: column;
-    z-index: 999;
-    top: 70px;
-    position: absolute;
-    right: 40px;
+    padding: 0 20px;
     color: white;
-    margin-bottom: 5px;
-    font-size: 15px; */
-
-    
+}
+.left{
+    flex: 2;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+ 
+}
+.right{
+    flex: 2;
+    display: flex;
+    align-items: center;
+   justify-content: space-between;
+   position: relative;
+ 
+}
+.rightdropdown{
     position: absolute;
+    top: 40px;
+    right: 480px;
     display: flex;
     flex-direction: column;
-    top: 50px;
-    right: -25px;
     z-index: 999;
-    background-color: gray;
-    padding: 10px;
-    gap: 7px;
-    width: max-content;
-    border-radius: 5px;
+    background-color: #1E2A4D;
     color: white;
-    font-weight: 600;
+    padding: 20px;
+    gap: 10px;
+    font-size: 16px;
+    border-radius: 5px;
+    
+}
+.logoTitle{
+    display: flex;
+    flex-direction: column;
+}
 
+.logoTopText{
+    font-size: 20px;
+    font-weight: bold;
+    margin-left: 18px;
+    letter-spacing: 1px;
+}
+.logoButtomText{
+    font-size: 22px;
+    font-weight: 300;
+    letter-spacing: 1px;
+}
+.navImg{
+    width: 100px;
+    height: max-content;
+    border-radius: 7px;
+}
+.qtsbtn{
+    font-size: 16px;
+    line-height: 1.15;
+    font-weight: 600;
+    padding: 20px 35px;
+    border: 2px #ff5e14;
+    background: #ff5e14;
+    color: #ffffff;
 }
