--- a/src/components/OldProject.css
+++ b/src/components/OldProject.css
@@ -1,14 +1,17 @@
 .oldproject{
-    color: white;
+    width: 100%;
+    height: calc(100vh - 80px);
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-wrap: wrap;
-    position: relative;
+    background-color: black;
+    margin: 0 auto;
 }
 .oldprojectsItems{
-    width: 600px;
-    height: 600px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 500px;
+    height: 500px;
     border: 1px solid gray;
     margin: 5px;
 }
@@ -18,21 +21,17 @@
     object-fit: contain;
     margin-top: 5px;
 }
-.slider{
-    width: 100%;
-    height: 100%;
-    z-index: 999;
-    position: sticky;
-    top: 10;
-    left: 50;
-    width: 80vw;
-    height: 80vh;
+.sliderOld{
+    position: absolute;
     display: flex;
     align-items: center;
-    justify-content: center;
-    gap: 20px;
+    width: 800px;
+    height: 500px;
+    background-color: rgb(213, 196, 196);
+    padding: 20px;
 }
-.wrapper{
+
+.wrapperOld{
     width: 100%;
     height: 100%;
     display: flex;
@@ -40,7 +39,7 @@
     align-items: center;
     position: sticky;
 }
-.wrapper>img{
+.wrapperOld>img{
     width: 100%;
     height: 100%;
     object-fit: cover;
