--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,13 +1,5 @@
-.navbar{
-    width: 100%;
-    height: 80px;
-    background-color:#001659;
-    display: flex;
-    align-items: center;
-    padding: 0 20px;
-    color: white;
-}
-.left{
+
+/* .left{
     flex: 2;
     display: flex;
     align-items: center;
@@ -21,11 +13,11 @@
    justify-content: space-between;
    position: relative;
  
-}
+} */
 .rightdropdown{
     position: absolute;
-    top: 40px;
-    right: 480px;
+    top: 50px;
+    right: 430px;
     display: flex;
     flex-direction: column;
     z-index: 999;
@@ -53,12 +45,7 @@
     font-weight: 300;
     letter-spacing: 1px;
 }
-.navImg{
-    width: 100px;
-    height: max-content;
-    border-radius: 7px;
-}
-.qtsbtn{
+/* .qtsbtn{
     font-size: 16px;
     line-height: 1.15;
     font-weight: 600;
@@ -66,4 +53,6 @@
     border: 2px #ff5e14;
     background: #ff5e14;
     color: #ffffff;
-}
+} */
+
+
