--- a/src/components/analytic.css
+++ b/src/components/analytic.css
@@ -1,12 +1,12 @@
 .AnalyticContainer{
-    width: 80%;
+    /* width: 80%;
     height: calc(100vh - 80px);
     color: rgb(94, 87, 87);
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: auto;
-    gap: 40px;
+    gap: 40px; */
 
 }
 .aboutDetailsleft{
@@ -24,13 +24,12 @@
     flex: 1;
 }
 .AboutImg{
-    width: 90%;
-    height: 500px;
-    object-fit: cover;
+    width: 100%;
+    height: 600px;
+    object-fit: contain;
 }
 
 .newContainer{
-    width: 400px;
     height: 100%;
     background-color: white;
     display: flex;
@@ -50,13 +49,7 @@
     padding: 0px 30px;
     margin-bottom: 20px;
 }
-.mainContainer{
-    background-color: #1E2A4D;
-    padding: 20px;
-    height: max-content;
-   
-   
-}
+
 .inputField{
     background-color: lightgray;
     padding: 10px 5px;
@@ -71,11 +64,11 @@
     font-weight: bold;
     margin-top: 10px;
 }
-.aboutH1{
+/* .aboutH1{
     color: black;
     font-size: 25px;
     font-weight: bold;
-}
+} */
 .AboutLable{
     font-size: 18px;
     text-transform: capitalize;
